# nebulax

./: .gitignore  README.md
src/: CMakeLists.txt
src/cmake/: nebulax.cmake  xplatform.cmake
src/examples/01_hello_world_console/: CMakeLists.txt  main.cc
src/foundation/: CMakeLists.txt
src/foundation/core/: debug.cc  types.h
src/foundation/core/posix/: posixsysfunc.cc  precompiled.h
src/foundation/core/win32/: win32singleton.h
src/foundation/io/: xmlreader.cc  xmlreader.h  xmlwriter.cc  xmlwriter.h
src/foundation/io/posix/: posixconsolehandler.cc
src/foundation/io/zipfs/: ziparchive.h  zipfileentry.h
src/foundation/memory/posix/: posixmemory.h
src/foundation/util/: string.cc
src/tests/: CMakeLists.txt
src/tests/testfoundation/: hashtabletest.cc  main.cc
src/tutorials/: CMakeLists.txt
src/tutorials/01_hello_world_console/: CMakeLists.txt  stdneb.cc  stdneb.h
