set(COMMON_SOURCES
    stdneb.cc 
    core/debug.cc
    core/refcounted.cc
    core/rtti.cc
    core/factory.cc
    core/coreserver.cc
    io/binaryreader.cc
    io/binarywriter.cc
    io/console.cc
    io/consolehandler.cc 
    io/filestream.cc
    io/ioserver.cc
    io/memorystream.cc
    io/stream.cc
    io/streamreader.cc
    io/streamwriter.cc
    io/textreader.cc
    io/textwriter.cc
    io/uri.cc
    io/xmlreader.cc
    io/xmlwriter.cc
    io/zipfilestream.cc
    io/zipfs/ziparchive.cc
    io/zipfs/zipdirentry.cc
    io/zipfs/zipfileentry.cc
    io/zipfs/zipfilesystem.cc
    messaging/asyncport.cc
    messaging/dispatcher.cc
    messaging/handler.cc
    messaging/message.cc
    messaging/messagereader.cc
    messaging/messagewriter.cc
    messaging/port.cc
    system/base/systeminfobase.cc
    threading/thread.cc
    timing/base/calendartimebase.cc
    util/blob.cc 
    util/crc.cc
    util/string.cc 
    util/cmdlineargs.cc
    util/runlengthcodec.cc
    #interface/base/iointerfacehandlerbase.cc
    #interface/interfaceprotocol.cc
    #interface/iointerface.cc
    #interface/iointerfacehandler.cc
    #memory/memorypool.cc
    #memory/debug/memorypagehandler.cc
    #memory/memorypoolpage.cc
    #app/application.cc
    #app/consoleapplication.cc
    #attr/attributecontainer.cc
    #attr/attributedefinitionbase.cc
    #attr/attributetable.cc
    #attr/attrid.cc
    #commands/iolibrary.cc
    #commands/stdlibrary.cc
    #core/debug/corepagehandler.cc
    #core/refcountedlist.cc
    #http/base64writer.cc
    #http/defaulthttprequesthandler.cc
    #http/httprequest.cc
    #http/httprequesthandler.cc
    #http/httprequestreader.cc
    #http/httpresponsewriter.cc
    #http/httpserver.cc
    #http/httpstatus.cc
    #io/debug/iopagehandler.cc
    #io/excelxmlreader.cc
    #math/bbox.cc
    #math/line.cc
    #math/sphere_.cc
    #net/socket.cc
    #net/tcpclient.cc
    #net/tcpclientconnection.cc
    #net/tcpserver.cc
    #remote/remotecontrol.cc
    #remote/remotecontrolproxy.cc
    #remote/remoteinterface.cc
    #remote/remotemessagehandler.cc
    #remote/remoteprotocol.cc
    #remote/remoteprotocol.nidl
    #remote/remoterequest.cc
    #remote/remoterequesthandler.cc
    #remote/remoterequestreader.cc
    #remote/remoteresponsewriter.cc
    #remote/remotestatus.cc
    #scripting/argsblock.cc
    #scripting/command.cc
    #scripting/debug/scriptingpagehandler.cc
    #scripting/lua/luaserver.cc
    #scripting/scriptserver.cc
)

if (APPLE)
    set(SOURCES
        ${COMMON_SOURCES}
        core/posix/posixsysfunc.cc
        io/posix/posixconsolehandler.cc
        io/posix/posixfswrapper.cc
        math/sce/sce_float4.cc
        math/sce/sce_matrix44.cc
        math/sce/sce_plane.cc
        memory/posix/posixheap.cc
        memory/posix/posixmemory.cc
        memory/posix/posixmemoryconfig.cc
        #net/posix/posixipaddress.cc
        #net/posix/posixsocket.cc
        system/darwin/darwinsysteminfo.cc
        threading/posix/posixthread.cc
        timing/darwin/darwintimer.cc
        timing/posix/posixcalendartime.cc
        util/posix/posixguid.cc
    )
endif()

#add_definitions("-D__NOZIP__")

add_library(NebulaXFoundation ${SOURCES})
set_target_properties(NebulaXFoundation PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "stdneb.h")
cotire(NebulaXFoundation)
